.metadata/.plugins/org.eclipse.cdt.ui/Practica3.build.log
09:40:12 **** Incremental Build of configuration Debug for project Practica3 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L475xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:145:29: warning: implicit declaration of function 'voltajeConversor' [-Wimplicit-function-declaration]
  145 |           writeIntegerToLCD(voltajeConversor(sample));
      |                             ^~~~~~~~~~~~~~~~
../Core/Src/main.c:148:29: warning: implicit declaration of function 'getButton' [-Wimplicit-function-declaration]
  148 |           writeIntegerToLCD(getButton(sample));
      |                             ^~~~~~~~~
../Core/Src/main.c: In function 'MX_GPIO_Init':
../Core/Src/main.c:725:25: error: 'ARD_D15_Pin' undeclared (first use in this function); did you mean 'ARD_D12_Pin'?
  725 |   GPIO_InitStruct.Pin = ARD_D15_Pin|ARD_D14_Pin;
      |                         ^~~~~~~~~~~
      |                         ARD_D12_Pin
../Core/Src/main.c:725:25: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:43: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

09:40:13 Build Failed. 2 errors, 2 warnings. (took 889ms)

